--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 # Database configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/yourdatabase
-spring.datasource.username=yourusername
-spring.datasource.password=yourpassword
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Настройки Swagger
+springfox.documentation.swagger.v2.path=/api-docs
+springfox.documentation.swagger-ui.base-url=/swagger-ui.html
