--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=20
 spring.main.web-application-type=servlet
 
-
+# Kafka configuration
+kafka.bootstrapAddress=localhost:9092
+kafka.topic.user=test-topic-14
+kafka.consumer.groupId=test-service-group-id
