--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,19 +11,6 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
-  app:
-    build:
-      context: .
-      dockerfile: app.Dockerfile
-    ports:
-      - "8080:8080" 
-    depends_on:
-      - db
-    environment:
-      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/mydatabase
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
-
   zookeeper:
     image: confluentinc/cp-zookeeper:7.2.1
     hostname: zookeeper
@@ -62,6 +49,21 @@ services:
       CONFLUENT_METRICS_REPORTER_TOPIC_REPLICAS: 1
       CONFLUENT_METRICS_ENABLE: 'true'
       CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
+#
+#  app:
+#    build:
+#      context: .
+#      dockerfile: app.Dockerfile
+#    ports:
+#      - "8080:8080"
+#    depends_on:
+#      - db
+#      - zookeeper
+#      - broker
+#    environment:
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/mydatabase
+#      SPRING_DATASOURCE_USERNAME: root
+#      SPRING_DATASOURCE_PASSWORD: root
 
 volumes:
   postgres-data:
