--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.datasource.hikari.maximum-pool-size=20
 spring.main.web-application-type=servlet
+
+server.port=8080
